# microserver

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  azure-pipelines.yml  index.html  run.sh
.github/workflows/: build.yaml  release.yaml
src/: main.rs  server.rs
