[package]
name = "microserver"
description = "Simple ad-hoc server with SPA support based on Warp!. Excellent for testing React, Angular, Vue apps and the like."
version = "0.2.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/robertohuertasm/microserver"
readme = "README.md"
keywords = ["server", "spa", "simple", "http-server", "cli"]
categories = ["web-programming::http-server", "network-programming"]

exclude = [
  "index.html",
  "run.sh"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33"
console = "0.12"

[profile.release]
lto = true
